--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 					<div id='magistrate-results' class='text-left'></div>
 					<div id='voting-results' class='text-left'></div>
 					<div id='neighborhood-assoc-results' class='text-left'></div>
+					<div id='solid-waste-results' class='text-left'></div>
 				</div>
 			</div>
 			<div class='col-md-3 text-center'>
@@ -216,6 +217,12 @@
 	  <ul class='list-unstyled'>
 	  	<li><strong>Neighborhood Association(s):</strong> {{Assoc_Name}}</li>
 	  </ul>
+	</script>
+
+	<script id="solid-waste-template" type="text/x-handlebars-template">
+		<ul class='list-unstyled'>
+			<li><strong>Solid Waste Pickup:</strong> {{DAY}}</li>
+		</ul>
 	</script>
 
 	<div id="footer">
