Comment out solid waste for the moment

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<div id='magistrate-results' class='text-left'></div>
 					<div id='voting-results' class='text-left'></div>
 					<div id='neighborhood-assoc-results' class='text-left'></div>
-					<div id='solid-waste-results' class='text-left'></div>
+					<!-- <div id='solid&#45;waste&#45;results' class='text&#45;left'></div> -->
 				</div>
 			</div>
 			<div class='col-md-3 text-center'>
