fixing broken info

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 	<script id="house-template" type="text/x-handlebars-template">
 	  <ul class='list-unstyled'>
 	  	<li><strong>State House District:</strong> {{District}}</li>
-	  	<li><strong>Rep:</strong> {{titleCase Rep}}</li>
+	  	<li><strong>Rep:</strong> {{titleCase LEGREP}}</li>
 	  </ul>
 	</script>
 
