fixing broken info

--- a/alt.html
+++ b/alt.html
@@ -86,15 +86,15 @@
 
 	<script id="house-template" type="text/x-handlebars-template">
 	  <ul class='list-unstyled'>
-	  	<li>State House District: {{District}}</li>
-	  	<li>Rep: {{Rep}}</li>
+	  	<li>State House District: {{LEGISLATIV}}</li>
+	  	<li>Rep: {{LEGREP}}</li>
 	  </ul>
 	</script>
 
 	<script id="senate-template" type="text/x-handlebars-template">
 	  <ul class='list-unstyled'>
-	  	<li>State Senate District: {{District}}</li>
-	  	<li>Rep: {{Rep}}</li>
+	  	<li>State Senate District: {{SENATORIAL}}</li>
+	  	<li>Rep: {{SENREP}}</li>
 	  </ul>
 	</script>
 
@@ -109,8 +109,8 @@
 
 	<script id="magistrate-template" type="text/x-handlebars-template">
 	  <ul class='list-unstyled'>
-	  	<li>Magistrate District: {{District}}</li>
-	  	<li>Rep: {{Rep}}</li>
+	  	<li>Magistrate District: {{MAGISTERIA}}</li>
+	  	<li>Rep: {{MAGREP}}</li>
 	  </ul>
 	</script>
 
@@ -122,26 +122,26 @@
 
 	<script id="elem-template" type="text/x-handlebars-template">
 	  <ul class='list-unstyled'>
-	  	<li>Elementary School: {{Name}}</li>
+	  	<li>Elementary School: {{AREA_NAME}}</li>
 	  </ul>
 	</script>
 
 	<script id="middle-template" type="text/x-handlebars-template">
 	  <ul class='list-unstyled'>
-	  	<li>Middle School: {{SName}}</li>
+	  	<li>Middle School: {{AREA_NAME}}</li>
 	  </ul>
 	</script>
 
 	<script id="high-template" type="text/x-handlebars-template">
 	  <ul class='list-unstyled'>
-	  	<li>High School: {{SName}}</li>
+	  	<li>High School: {{AREA_NAME}}</li>
 	  </ul>
 	</script>
 
 	<script id="school-board-template" type="text/x-handlebars-template">
 	  <ul class='list-unstyled'>
-	  	<li>School Board District: {{District}}</li>
-	  	<li>Rep: {{Rep}}</li>
+	  	<li>School Board District: {{SCHOOL}}</li>
+	  	<li>Rep: {{SCHREP}}</li>
 	  </ul>
 	</script>
 
