commenting out trash day

--- a/alt.html
+++ b/alt.html
@@ -145,11 +145,11 @@
 	  </ul>
 	</script>
 
-	<script id="solid-waste-template" type="text/x-handlebars-template">
+<!-- 	<script id="solid-waste-template" type="text/x-handlebars-template">
 		<ul class='list-unstyled'>
 			<li><strong>Solid Waste Pickup:</strong> {{DAY}}</li>
 		</ul>
-	</script>
+	</script> -->
 
 </body>
 </html>
